test/visibility/only/onlyPrivate.good
onlyPrivate.chpl:16: error: Bad identifier in 'only' clause, 'd' is private
